--- a/javascript高级程序设计/回调函数.html
+++ b/javascript高级程序设计/回调函数.html
@@ -14,7 +14,7 @@
 				<input type="text" id="text"  value="123" />
 				<input type="number" name="" min="0" max="20" step="5" required>
 				<input type="number" name="" min="0" max="20" pattern="[0-5]" required>
-				
+				 
 				<input id="chongzhi" type="reset" name="" id="" value="重置" />
 				<div designmode = "on" style="width:100px;height:100px;"></div>
 				<input type="submit" value=""/>
@@ -25,6 +25,8 @@
 <script>
 
 
+	
+	
 	
 	function say(){
 		console.log("say it")
@@ -38,7 +40,7 @@
 	}
 	
 	var form1 = document.getElementById("form1")
-	console.log(form1.length)
+	// console.log(form1.length)
 	document.getElementById("text").focus()
 	document.getElementById("text").setSelectionRange(0,2)
 	
