--- a/苦工业务统计/xingcheng/行程介绍.html
+++ b/苦工业务统计/xingcheng/行程介绍.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns=""><head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>行程介绍</title>
     <meta http-equiv="X-UA-Compatible" content="IE=EmulateIE10">
@@ -177,10 +176,254 @@
                                 </ul>
                             </div>
                         </div>
+                        <div class="routable_cont_bg first_cont_bg routable_complete" >
+                            <table>
+                                <colgroup>
+                                    <col class="width01">
+                                    <col class="width02">
+                                    <col class="width03">
+                                </colgroup>
+                                <tbody>
+                                <tr class="tr_top01">
+                                    <td class="t_r">
+                                        <div class="title_icon">
+                                            <span class="icon flt_icon01 js_select_icon"></span>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <span class="complete_time" >08:30</span>
+                                    </td>
+                                    <td>
+                                        <div class="complete_text" >
+                                            出发
+                                        </div>
+                                        <div class="complete_text" >
+                                            是否直飞:待定
+                                        </div>
+                                    </td>
+                                    <!--/ko-->
+                                </tr>
+                                <tr class="tr_bt01">
+                                    <td class="t_r">
+                                    </td>
+                                    <td>
+                                    </td>
+                                    <td>
+                                        <div class="xc_input_box01">
+                                        </div>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                            <i class="del_icon01" ></i>
+                        </div>
+                        <div class="routable_add">
+                            <a href="#" class="add_btn01" >
+                                <span class="fh">+</span>新增行程
+                            </a>
+                            <div class="add_frame01">
+                                <ul>
+                                    <li><a href="#" class="add_box">航班</a><span class="icon flt_icon01" ></span></li>
+                                    <li><a href="#" class="add_box">交通</a><span class="icon car_icon01" ></span></li>
+                                    <li><a href="#" class="add_box">酒店</a><span class="icon hotel_icon01" ></span></li>
+                                    <li><a href="#" class="add_box">景点</a><span class="icon flag_icon01" ></span></li>
+                                    <li class="">
+                                        <a href="#" class="add_box">用餐</a>
+                                        <span class="icon food_icon01" ></span>
+                                        <div class="second_cont food_cont ">
+                                            <a href="#" >早餐</a>
+                                            <a href="#" >午餐</a>
+                                            <a href="#" >晚餐</a>
+                                        </div>
+                                    </li>
+                                    <li><a href="#" class="add_box">购物</a><span class="icon buy_icon01" ></span></li>
+                                    <li><a href="#" class="add_box">自由活动</a><span class="icon phone_icon02" ></span></li>
+                                    <li><a href="#" class="add_box">课程</a><span class="icon book_icon01" ></span></li>
+                                    <li><a href="#" class="add_box">活动</a><span class="icon pic_icon01" ></span></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="routable_cont_bg first_cont_bg routable_cont_curr">
+                            <table>
+                                <colgroup>
+                                    <col class="width01">
+                                    <col class="width02">
+                                    <col class="width03">
+                                </colgroup>
+                                <tbody>
+                                <tr>
+                                    <td class="t_r">
+                                        <div class="title_icon">
+                                            <span class="icon phone_icon02 js_select_icon" ></span>
+                                            <div class="add_frame01">
+                                                <ul>
+                                                    <li><a href="#" class="add_box">航班</a><span class="icon flt_icon01" ></span></li>
+                                                    <li><a href="#" class="add_box">交通</a><span class="icon car_icon01" ></span></li>
+                                                    <li><a href="#" class="add_box">酒店</a><span class="icon hotel_icon01" ></span></li>
+                                                    <li><a href="#" class="add_box">景点</a><span class="icon flag_icon01" ></span></li>
+                                                    <li>
+                                                        <a href="#" class="add_box">用餐</a>
+                                                        <span class="icon food_icon01" ></span>
+                                                        <div class="second_cont food_cont ">
+                                                            <a href="#">早餐</a>
+                                                            <a href="#">午餐</a>
+                                                            <a href="#">晚餐</a>
+                                                        </div>
+                                                    </li>
+                                                    <li><a href="#" class="add_box">购物</a><span class="icon buy_icon01" ></span></li>
+                                                    <li><a href="#" class="add_box">自由活动</a><span class="icon phone_icon02" ></span></li>
+                                                    <li><a href="#" class="add_box">课程</a><span class="icon book_icon01" ></span></li>
+                                                    <li><a href="#" class="add_box">活动</a><span class="icon pic_icon01" ></span></li>
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </td>
+                                    <td rowspan="2">
+                                        <div class="select_time">
+                                            <i class="tips_star">*</i>
+                                            <input name="" type="text" readonly="readonly" class="input_text" placeholder="HH">:<input name="" readonly="readonly" type="text" class="input_text" placeholder="MM">
+                                        </div>
+                                        <div class="select_time" style="display: none;">
+                                            <i class=" tips_star">*</i>
+                                            <input name="" type="text" readonly="readonly" class="input_text">
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div class="add_box pic_add_box">
+                                            <textarea name="" id="" class="textarea03 input_text_long02" placeholder="请输入自由活动名称" ></textarea>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td class="t_r">
+                                    </td>
+                                    <td>
+                                        <div class="xc_input_box01">
+                                            <div class="time_input_box02 time_box_fillin">
+                                                <span class="tit01">行驶距离</span>
+                                                <div class="input_box01">
+                                                    <input name="" type="text" class="input_text input_text_shot01">
+                                                </div>
+                                            </div>
+                                            <div class="time_input_box01 time_box_fillin">
+                                                <span class="tit01">行驶</span>
+                                                <div class="input_box01">
+                                                    <input type="text"><span class="text">小时</span>
+                                                </div>
+                                                <div class="input_box01">
+                                                    <input type="text"><span class="text">分钟</span>
+                                                </div>
+                                            </div>
+                                            <div class="time_input_box01 time_box_fillin">
+                                                <span class="tit01">活动</span>
+                                                <div class="input_box01">
+                                                    <input type="text"><span class="text">小时</span>
+                                                </div>
+                                                <div class="input_box01">
+                                                    <input type="text"><span class="text">分钟</span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                            <i class="del_icon01"></i>
+                            <!--<span class="routable_add"></span>-->
+                        </div>
+                        <div class="routable_add">
+                            <a href="#" class="add_btn01">
+                                <span class="fh">+</span>新增行程
+                            </a>
+                            <div class="add_frame01">
+                                <ul>
+                                    <li><a href="#" class="add_box">航班</a><span class="icon flt_icon01"></span></li>
+                                    <li><a href="#" class="add_box">交通</a><span class="icon car_icon01"></span></li>
+                                    <li><a href="#" class="add_box">酒店</a><span class="icon hotel_icon01"></span></li>
+                                    <li><a href="#" class="add_box">景点</a><span class="icon flag_icon01"></span></li>
+                                    <li>
+                                        <a href="#" class="add_box">用餐</a>
+                                        <span class="icon food_icon01"></span>
+                                        <div class="second_cont food_cont ">
+                                            <a href="#">早餐</a>
+                                            <a href="#">午餐</a>
+                                            <a href="#">晚餐</a>
+                                        </div>
+                                    </li>
+                                    <li><a href="#" class="add_box">购物</a><span class="icon buy_icon01" ></span></li>
+                                    <li><a href="#" class="add_box">自由活动</a><span class="icon phone_icon02"></span></li>
+                                    <li><a href="#" class="add_box">课程</a><span class="icon book_icon01" ></span></li>
+                                    <li><a href="#" class="add_box">活动</a><span class="icon pic_icon01"></span></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="routable_cont_bg first_cont_bg routable_complete" >
+                            <table>
+                                <colgroup>
+                                    <col class="width01">
+                                    <col class="width02">
+                                    <col class="width03">
+                                </colgroup>
+                                <tbody>
+                                <tr class="tr_top01">
+                                    <td class="t_r">
+                                        <div class="title_icon">
+                                            <span class="icon food_icon01 js_select_icon js_breakfast"></span>
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <span class="complete_time">全天</span>
+                                    </td>
+                                    <td>
+                                        <div class="complete_text_long">
+                                            早餐:吃饭;
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr class="tr_bt01">
+                                    <td class="t_r">
+                                    </td>
+                                    <td>
+                                    </td>
+                                    <td>
+                                        <div class="xc_input_box01">
+                                        </div>
+                                    </td>
+                                </tr>
+                                </tbody>
+                            </table>
+                            <i class="del_icon01"></i>
+                        </div>
+                        <div class="routable_add">
+                            <a href="#" class="add_btn01" >
+                                <span class="fh">+</span>新增行程
+                            </a>
+                            <div class="add_frame01">
+                                <ul>
+                                    <li><a href="#" class="add_box">航班</a><span class="icon flt_icon01" ></span></li>
+                                    <li><a href="#" class="add_box">交通</a><span class="icon car_icon01" ></span></li>
+                                    <li><a href="#" class="add_box">酒店</a><span class="icon hotel_icon01"></span></li>
+                                    <li><a href="#" class="add_box">景点</a><span class="icon flag_icon01"></span></li>
+                                    <li>
+                                        <a href="#" class="add_box">用餐</a>
+                                        <span class="icon food_icon01" ></span>
+                                        <div class="second_cont food_cont ">
+                                            <a href="#">早餐</a>
+                                            <a href="#">午餐</a>
+                                            <a href="#">晚餐</a>
+                                        </div>
+                                    </li>
+                                    <li><a href="#" class="add_box">购物</a><span class="icon buy_icon01"></span></li>
+                                    <li><a href="#" class="add_box">自由活动</a><span class="icon phone_icon02"></span></li>
+                                    <li><a href="#" class="add_box">课程</a><span class="icon book_icon01"></span></li>
+                                    <li><a href="#" class="add_box">活动</a><span class="icon pic_icon01"></span></li>
+                                </ul>
+                            </div>
+                        </div>
                     </div>
                     <!-- 新增行程类型S -->
                     <div class="addnew_route js_add_route" style="z-index: 0;">
-                        <a href="#" class="add_btn01"><span class="fh">+</span>新增行程</a>
+                        <a href="#" data-bind="event:{click:function(d,e){$root.AddNewRoute(e,d)}}" class="add_btn01"><span class="fh">+</span>新增行程</a>
                         <div class="add_frame01 add_frame02">
                             <ul>
                                 <li><a href="#" class="add_box">航班</a><span class="icon flt_icon01" ></span></li>
@@ -321,7 +564,7 @@
                     </div>
                     <!-- 新增行程类型S -->
                     <div class="addnew_route js_add_route" style="z-index: 0;">
-                        <a href="#"  class="add_btn01"><span class="fh">+</span>新增行程</a>
+                        <a href="#" data-bind="event:{click:function(d,e){$root.AddNewRoute(e,d)}}" class="add_btn01"><span class="fh">+</span>新增行程</a>
                         <div class="add_frame01 add_frame02">
                             <ul>
                                 <li><a href="#" class="add_box">航班</a><span class="icon flt_icon01" ></span></li>
